@@ -9,6 +9,7 @@ import org.springframework.boot.test.context.ConfigDataApplicationContextInitial
 import org.springframework.test.context.ContextConfiguration;
 import org.springframework.test.context.junit.jupiter.SpringExtension;
 import us.dot.its.jpo.ode.OdeProperties;
+import us.dot.its.jpo.ode.kafka.Asn1CoderTopics;
 import us.dot.its.jpo.ode.kafka.OdeKafkaProperties;
 import us.dot.its.jpo.ode.model.Asn1Encoding.EncodingRule;
 import us.dot.its.jpo.ode.model.OdeAsn1Data;
@@ -19,32 +20,28 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 
 @ExtendWith(SpringExtension.class)
 @ContextConfiguration(initializers = ConfigDataApplicationContextInitializer.class)
-@EnableConfigurationProperties(value = OdeKafkaProperties.class)
+@EnableConfigurationProperties(value = {OdeKafkaProperties.class, Asn1CoderTopics.class})
 class Asn1DecodeSSMJSONTest {
     private final String json = "{\"metadata\":{\"recordType\":\"ssmTx\",\"securityResultCode\":\"success\",\"payloadType\":\"us.dot.its.jpo.ode.model.OdeAsn1Payload\",\"serialId\":{\"streamId\":\"c4e4e92d-dccc-45f5-813f-7d36795529a0\",\"bundleSize\":1,\"bundleId\":0,\"recordId\":0,\"serialNumber\":0},\"odeReceivedAt\":\"2024-03-15T19:31:02.907835400Z\",\"schemaVersion\":6,\"maxDurationTime\":0,\"recordGeneratedBy\":\"RSU\",\"sanitized\":false,\"originIp\":\"192.168.0.1\",\"ssmSource\":\"RSU\"},\"payload\":{\"dataType\":\"us.dot.its.jpo.ode.model.OdeHexByteArray\",\"data\":{\"bytes\":\"0381004003807C001E120000000005E9C04071A26614C06000040BA000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000\"}}}";
 
     @Autowired
     OdeKafkaProperties odeKafkaProperties;
 
-    @Test
-    void testConstructor() {
-        OdeProperties properties = new OdeProperties();
-        assertEquals("topic.OdeRawEncodedSSMJson", properties.getKafkaTopicOdeRawEncodedSSMJson());
-    }
+    @Autowired
+    Asn1CoderTopics asn1CoderTopics;
 
     @Test
     void testProcess() throws JSONException {
-        OdeProperties properties = new OdeProperties();
-        Asn1DecodeSSMJSON testDecodeSsmJson = new Asn1DecodeSSMJSON(properties, odeKafkaProperties);
+        Asn1DecodeSSMJSON testDecodeSsmJson = new Asn1DecodeSSMJSON(odeKafkaProperties, asn1CoderTopics.getDecoderInput());
 
         OdeAsn1Data resultOdeObj = testDecodeSsmJson.process(json);
 
         // Validate the metadata
         OdeSsmMetadata jsonMetadataObj = (OdeSsmMetadata) resultOdeObj.getMetadata();
         assertEquals(OdeSsmMetadata.SsmSource.RSU, jsonMetadataObj.getSsmSource());
-        assertEquals("unsecuredData", jsonMetadataObj.getEncodings().get(0).getElementName());
-        assertEquals("MessageFrame", jsonMetadataObj.getEncodings().get(0).getElementType());
-        assertEquals(EncodingRule.UPER, jsonMetadataObj.getEncodings().get(0).getEncodingRule());
+        assertEquals("unsecuredData", jsonMetadataObj.getEncodings().getFirst().getElementName());
+        assertEquals("MessageFrame", jsonMetadataObj.getEncodings().getFirst().getElementType());
+        assertEquals(EncodingRule.UPER, jsonMetadataObj.getEncodings().getFirst().getEncodingRule());
 
         // Validate the payload
         String expectedPayload = "{\"bytes\":\"001E120000000005E9C04071A26614C06000040BA000\"}";
